include/El/lapack_like/factor.h

/* Multiply vectors after a pivoted LDL factorization
   -------------------------------------------------- */
EL_EXPORT ElError ElMultiplyAfterLDLPiv_s
( ElConstMatrix_s A,
  ElConstMatrix_s dSub,
  ElConstPermutation p,
  ElMatrix_s B );
EL_EXPORT ElError ElMultiplyAfterLDLPiv_d
( ElConstMatrix_d A,
  ElConstMatrix_d dSub,
  ElConstPermutation p,
  ElMatrix_d B );
EL_EXPORT ElError ElMultiplyAfterLDLPiv_c
( ElConstMatrix_c A,
  ElConstMatrix_c dSub,
  ElConstPermutation p,
  ElMatrix_c B, 
  bool conjugate );
EL_EXPORT ElError ElMultiplyAfterLDLPiv_z
( ElConstMatrix_z A,
  ElConstMatrix_z dSub,
  ElConstPermutation p,
  ElMatrix_z B, 
  bool conjugate );
EL_EXPORT ElError ElMultiplyAfterLDLPivDist_s
( ElConstDistMatrix_s A,
  ElConstDistMatrix_s dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_s B );
EL_EXPORT ElError ElMultiplyAfterLDLPivDist_d
( ElConstDistMatrix_d A,
  ElConstDistMatrix_d dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_d B );
EL_EXPORT ElError ElMultiplyAfterLDLPivDist_c
( ElConstDistMatrix_c A,
  ElConstDistMatrix_c dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_c B,
  bool conjugate );
EL_EXPORT ElError ElMultiplyAfterLDLPivDist_z
( ElConstDistMatrix_z A,
  ElConstDistMatrix_z dSub,
  ElConstDistPermutation p, 
  ElDistMatrix_z B,
  bool conjugate );
/* LU factorization with no pivoting
   --------------------------------- */
EL_EXPORT ElError ElLU_s( ElMatrix_s A );
EL_EXPORT ElError ElLU_d( ElMatrix_d A );
EL_EXPORT ElError ElLU_c( ElMatrix_c A );
EL_EXPORT ElError ElLU_z( ElMatrix_z A );
EL_EXPORT ElError ElLUDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElLUDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElLUDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElLUDist_z( ElDistMatrix_z A );
/* Solve linear systems after factorization
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElSolveAfterLU_s
( ElOrientation orientation, ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElSolveAfterLU_d
( ElOrientation orientation, ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElSolveAfterLU_c
( ElOrientation orientation, ElConstMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElSolveAfterLU_z
( ElOrientation orientation, ElConstMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElSolveAfterLUDist_s
( ElOrientation orientation, ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElSolveAfterLUDist_d
( ElOrientation orientation, ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElSolveAfterLUDist_c
( ElOrientation orientation, ElConstDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElSolveAfterLUDist_z
( ElOrientation orientation, ElConstDistMatrix_z A, ElDistMatrix_z B );
/* LU factorization with partial pivoting
   -------------------------------------- */
EL_EXPORT ElError ElLUPartialPiv_s( ElMatrix_s A, ElPermutation P );
EL_EXPORT ElError ElLUPartialPiv_d( ElMatrix_d A, ElPermutation P );
EL_EXPORT ElError ElLUPartialPiv_c( ElMatrix_c A, ElPermutation P );
EL_EXPORT ElError ElLUPartialPiv_z( ElMatrix_z A, ElPermutation P );
EL_EXPORT ElError ElLUPartialPivDist_s( ElDistMatrix_s A, ElDistPermutation P );
EL_EXPORT ElError ElLUPartialPivDist_d( ElDistMatrix_d A, ElDistPermutation P );
EL_EXPORT ElError ElLUPartialPivDist_c( ElDistMatrix_c A, ElDistPermutation P );
EL_EXPORT ElError ElLUPartialPivDist_z( ElDistMatrix_z A, ElDistPermutation P );
/* LU factorization with full pivoting
   ----------------------------------- */
EL_EXPORT ElError ElLUFullPiv_s
( ElMatrix_s A, ElPermutation P, ElPermutation Q );
EL_EXPORT ElError ElLUFullPiv_d
( ElMatrix_d A, ElPermutation P, ElPermutation Q );
EL_EXPORT ElError ElLUFullPiv_c
( ElMatrix_c A, ElPermutation P, ElPermutation Q );
EL_EXPORT ElError ElLUFullPiv_z
( ElMatrix_z A, ElPermutation P, ElPermutation Q );
EL_EXPORT ElError ElLUFullPivDist_s
( ElDistMatrix_s A, ElDistPermutation P, ElDistPermutation Q );
EL_EXPORT ElError ElLUFullPivDist_d
( ElDistMatrix_d A, ElDistPermutation P, ElDistPermutation Q );
EL_EXPORT ElError ElLUFullPivDist_c
( ElDistMatrix_c A, ElDistPermutation P, ElDistPermutation Q );
EL_EXPORT ElError ElLUFullPivDist_z
( ElDistMatrix_z A, ElDistPermutation P, ElDistPermutation Q );
/* Rank-one LU modification
   ------------------------ */
EL_EXPORT ElError ElLUMod_s
( ElMatrix_s A, ElPermutation P, 
  ElConstMatrix_s u, ElConstMatrix_s v, float tau );
EL_EXPORT ElError ElLUMod_d
( ElMatrix_d A, ElPermutation P, 
  ElConstMatrix_d u, ElConstMatrix_d v, double tau );
EL_EXPORT ElError ElLUMod_c
( ElMatrix_c A, ElPermutation P, 
  ElConstMatrix_c u, ElConstMatrix_c v, bool conjugate, float tau );
EL_EXPORT ElError ElLUMod_z
( ElMatrix_z A, ElPermutation P, 
  ElConstMatrix_z u, ElConstMatrix_z v, bool conjugate, double tau );
EL_EXPORT ElError ElLUModDist_s
( ElDistMatrix_s A, ElDistPermutation P, 
  ElConstDistMatrix_s u, ElConstDistMatrix_s v, float tau );
EL_EXPORT ElError ElLUModDist_d
( ElDistMatrix_d A, ElDistPermutation P, 
  ElConstDistMatrix_d u, ElConstDistMatrix_d v, double tau );
EL_EXPORT ElError ElLUModDist_c
( ElDistMatrix_c A, ElDistPermutation P, 
  ElConstDistMatrix_c u, ElConstDistMatrix_c v, bool conjugate, float tau );
EL_EXPORT ElError ElLUModDist_z
( ElDistMatrix_z A, ElDistPermutation P, 
  ElConstDistMatrix_z u, ElConstDistMatrix_z v, bool conjugate, double tau );