include/El/lapack_like/factor.py


lib.ElMultiplyAfterLDLPiv_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElMultiplyAfterLDLPiv_s.restype = c_uint
lib.ElMultiplyAfterLDLPiv_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElMultiplyAfterLDLPiv_d.restype = c_uint
lib.ElMultiplyAfterLDLPiv_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDLPiv_c.restype = c_uint
lib.ElMultiplyAfterLDLPiv_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDLPiv_z.restype = c_uint
lib.ElMultiplyAfterLDLPivDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElMultiplyAfterLDLPivDist_s.restype = c_uint
lib.ElMultiplyAfterLDLPivDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElMultiplyAfterLDLPivDist_d.restype = c_uint
lib.ElMultiplyAfterLDLPivDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDLPivDist_c.restype = c_uint
lib.ElMultiplyAfterLDLPivDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,bType]
lib.ElMultiplyAfterLDLPivDist_z.restype = c_uint
def MultiplyAfterLDLPiv(A,dSub,p,B,conjugate=True):
  if type(A) is not type(dSub) or type(dSub) is not type(p) or \
     type(p) is not type(B):
    raise Exception('Types of {A,dSub,p,B} must match')
  if A.tag != dSub.tag or dSub.tag != B.tag:
    raise Exception('Datatypes of {A,dSub,B} must match')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElMultiplyAfterLDLPiv_s(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == dTag: lib.ElMultiplyAfterLDLPiv_d(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == cTag:
      lib.ElMultiplyAfterLDLPiv_c(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    elif A.tag == zTag:
      lib.ElMultiplyAfterLDLPiv_z(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: 
      lib.ElMultiplyAfterLDLPivDist_s(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == dTag: 
      lib.ElMultiplyAfterLDLPivDist_d(A.obj,dSub.obj,p.obj,B.obj)
    elif A.tag == cTag:
      lib.ElMultiplyAfterLDLPivDist_c(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    elif A.tag == zTag:
      lib.ElMultiplyAfterLDLPivDist_z(A.obj,dSub.obj,p.obj,B.obj,conjugate)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# LU factorization
# ================

# Emulate an enum for the pivot type for LU factorization
(LU_PARTIAL,LU_FULL,LU_ROOK,LU_WITHOUT_PIVOTING)=(0,1,2,3)

lib.ElLU_s.argtypes = [c_void_p]
lib.ElLU_s.restype = c_uint
lib.ElLU_d.argtypes = [c_void_p]
lib.ElLU_d.restype = c_uint
lib.ElLU_c.argtypes = [c_void_p]
lib.ElLU_c.restype = c_uint
lib.ElLU_z.argtypes = [c_void_p]
lib.ElLU_z.restype = c_uint
lib.ElLUDist_s.argtypes = [c_void_p]
lib.ElLUDist_s.restype = c_uint
lib.ElLUDist_d.argtypes = [c_void_p]
lib.ElLUDist_d.restype = c_uint
lib.ElLUDist_c.argtypes = [c_void_p]
lib.ElLUDist_c.restype = c_uint
lib.ElLUDist_z.argtypes = [c_void_p]
lib.ElLUDist_z.restype = c_uint
lib.ElLUPartialPiv_s.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPiv_s.restype = c_uint
lib.ElLUPartialPiv_d.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPiv_d.restype = c_uint
lib.ElLUPartialPiv_c.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPiv_c.restype = c_uint
lib.ElLUPartialPiv_z.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPiv_z.restype = c_uint
lib.ElLUPartialPivDist_s.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPivDist_s.restype = c_uint
lib.ElLUPartialPivDist_d.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPivDist_d.restype = c_uint
lib.ElLUPartialPivDist_c.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPivDist_c.restype = c_uint
lib.ElLUPartialPivDist_z.argtypes = [c_void_p,c_void_p]
lib.ElLUPartialPivDist_z.restype = c_uint
lib.ElLUFullPiv_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPiv_s.restype = c_uint
lib.ElLUFullPiv_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPiv_d.restype = c_uint
lib.ElLUFullPiv_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPiv_c.restype = c_uint
lib.ElLUFullPiv_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPiv_z.restype = c_uint
lib.ElLUFullPivDist_s.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPivDist_s.restype = c_uint
lib.ElLUFullPivDist_d.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPivDist_d.restype = c_uint
lib.ElLUFullPivDist_c.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPivDist_c.restype = c_uint
lib.ElLUFullPivDist_z.argtypes = [c_void_p,c_void_p,c_void_p]
lib.ElLUFullPivDist_z.restype = c_uint

def LU(A,pivType=LU_PARTIAL):
  if type(A) is Matrix: 
    if pivType == LU_WITHOUT_PIVOTING:
      if   A.tag == sTag: lib.ElLU_s(A.obj)
      elif A.tag == dTag: lib.ElLU_d(A.obj)
      elif A.tag == cTag: lib.ElLU_c(A.obj)
      elif A.tag == zTag: lib.ElLU_z(A.obj)
      else: raise Exception('Unsupported datatype')
    elif pivType == LU_PARTIAL:
      p = Matrix(iTag)
      if   A.tag == sTag: lib.ElLUPartialPiv_s(A.obj,p.obj)
      elif A.tag == dTag: lib.ElLUPartialPiv_d(A.obj,p.obj)
      elif A.tag == cTag: lib.ElLUPartialPiv_c(A.obj,p.obj)
      elif A.tag == zTag: lib.ElLUPartialPiv_z(A.obj,p.obj)
      else: raise Exception('Unsupported datatype')
      return p
    elif pivType == LU_FULL:
      p = Matrix(iTag)
      q = Matrix(iTag)
      if   A.tag == sTag: lib.ElLUFullPiv_s(A.obj,p.obj,q.obj)
      elif A.tag == dTag: lib.ElLUFullPiv_d(A.obj,p.obj,q.obj)
      elif A.tag == cTag: lib.ElLUFullPiv_c(A.obj,p.obj,q.obj)
      elif A.tag == zTag: lib.ElLUFullPiv_z(A.obj,p.obj,q.obj)
      else: raise Exception('Unsupported datatype')
      return p, q
    else: raise Exception('Unsupported pivot type')
  elif type(A) is DistMatrix:
    if pivType == LU_WITHOUT_PIVOTING:
      if   A.tag == sTag: lib.ElLUDist_s(A.obj)
      elif A.tag == dTag: lib.ElLUDist_d(A.obj)
      elif A.tag == cTag: lib.ElLUDist_c(A.obj)
      elif A.tag == zTag: lib.ElLUDist_z(A.obj)
      else: raise Exception('Unsupported datatype')
    elif pivType == LU_PARTIAL:
      p = DistMatrix(iTag,VC,STAR,A.Grid())
      if   A.tag == sTag: lib.ElLUPartialPivDist_s(A.obj,p.obj)
      elif A.tag == dTag: lib.ElLUPartialPivDist_d(A.obj,p.obj)
      elif A.tag == cTag: lib.ElLUPartialPivDist_c(A.obj,p.obj)
      elif A.tag == zTag: lib.ElLUPartialPivDist_z(A.obj,p.obj)
      else: raise Exception('Unsupported datatype')
      return p
    elif pivType == LU_FULL:
      p = DistMatrix(iTag,VC,STAR,A.Grid())
      q = DistMatrix(iTag,VC,STAR,A.Grid())
      if   A.tag == sTag: lib.ElLUFullPivDist_s(A.obj,p.obj,q.obj)
      elif A.tag == dTag: lib.ElLUFullPivDist_d(A.obj,p.obj,q.obj)
      elif A.tag == cTag: lib.ElLUFullPivDist_c(A.obj,p.obj,q.obj)
      elif A.tag == zTag: lib.ElLUFullPivDist_z(A.obj,p.obj,q.obj)
      else: raise Exception('Unsupported datatype')
      return p, q
    else: raise Exception('Unsupported pivot type')
  else: raise Exception('Unsupported matrix type')

lib.ElLUMod_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,sType]
lib.ElLUMod_s.restype = c_uint
lib.ElLUMod_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,dType]
lib.ElLUMod_d.restype = c_uint
lib.ElLUMod_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,sType]
lib.ElLUMod_c.restype = c_uint
lib.ElLUMod_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,dType]
lib.ElLUMod_z.restype = c_uint
lib.ElLUModDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,sType]
lib.ElLUModDist_s.restype = c_uint
lib.ElLUModDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,dType]
lib.ElLUModDist_d.restype = c_uint
lib.ElLUModDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,sType]
lib.ElLUModDist_c.restype = c_uint
lib.ElLUModDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,dType]
lib.ElLUModDist_z.restype = c_uint
def LUMod(A,p,u,v,conjugate=True,tau=0.1):
  if type(A) is not type(p) or type(p) is not type(u) or type(u) is not type(v):
    raise Exception('Types of {A,p,u,v} must be equal')
  if A.tag != u.tag or u.tag != v.tag:
    raise Exception('Datatypes of {A,u,v} must be equal')
  if p.tag != iTag:
    raise Exception('p must be integral')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElLUMod_s(A.obj,p.obj,u.obj,v.obj,tau)
    elif A.tag == dTag: lib.ElLUMod_d(A.obj,p.obj,u.obj,v.obj,tau)
    elif A.tag == cTag: lib.ElLUMod_c(A.obj,p.obj,u.obj,v.obj,conjugate,tau)
    elif A.tag == zTag: lib.ElLUMod_z(A.obj,p.obj,u.obj,v.obj,conjugate,tau)
    else: raise Exception('Unsupported datatype') 
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElLUModDist_s(A.obj,p.obj,u.obj,v.obj,tau)
    elif A.tag == dTag: lib.ElLUModDist_d(A.obj,p.obj,u.obj,v.obj,tau)
    elif A.tag == cTag: lib.ElLUModDist_c(A.obj,p.obj,u.obj,v.obj,conjugate,tau)
    elif A.tag == zTag: lib.ElLUModDist_z(A.obj,p.obj,u.obj,v.obj,conjugate,tau)
    else: raise Exception('Unsupported datatype') 
  else: raise Exception('Unsupported matrix type')

lib.ElSolveAfterLU_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLU_s.restype = c_uint
lib.ElSolveAfterLU_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLU_d.restype = c_uint
lib.ElSolveAfterLU_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLU_c.restype = c_uint
lib.ElSolveAfterLU_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLU_z.restype = c_uint
lib.ElSolveAfterLUDist_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLUDist_s.restype = c_uint
lib.ElSolveAfterLUDist_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLUDist_d.restype = c_uint
lib.ElSolveAfterLUDist_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLUDist_c.restype = c_uint
lib.ElSolveAfterLUDist_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSolveAfterLUDist_z.restype = c_uint
def SolveAfterLU(orient,A,B):
  if type(A) is not type(B):
    raise Exception('Types of A and B must match')
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSolveAfterLU_s(orient,A.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLU_d(orient,A.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterLU_c(orient,A.obj,B.obj)
    elif A.tag == zTag: lib.ElSolveAfterLU_z(orient,A.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSolveAfterLUDist_s(orient,A.obj,B.obj)
    elif A.tag == dTag: lib.ElSolveAfterLUDist_d(orient,A.obj,B.obj)
    elif A.tag == cTag: lib.ElSolveAfterLUDist_c(orient,A.obj,B.obj)
    elif A.tag == zTag: lib.ElSolveAfterLUDist_z(orient,A.obj,B.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
